# MiniGovern

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 26a7bab020d5_add_added_by_column_to_tags_table.py  8d24c56670a2_add_created_updated_at_in_audit_log_.py  b428bda59f9e_initial_schema.py
app/: main.py
app/db/: base.py  session.py
app/models/: __init__.py  audit.py  catalog.py  category.py  dataset.py  datasource.py  scan_job.py  tag.py  user.py
app/routers/: main.py
app/schemas/: auth.py  category.py  dataset.py  datasource.py  language.py  scan_job.py
app/services/: audit.py  auth.py  catagory.py  catalog.py  crud.py  dataset.py  datasource.py  enrichment.py  mysql_scanner.py  pii_classifier.py  profiler.py  scan_job.py  tags.py
app/services/emails/: email.py  email_notification.py  email_templates.py
app/views/: auth.py  catalog.py  categories.py  datasets.py  datasources.py  jobs.py  scan_job.py  tags.py
app/workers/: scan_worker.py
core/: config.py  logging.py  rbac.py  security.py
core/db/: base.py  session.py  source_session.py
core/security/: encryption.py  masking.py  security.py
core/settings/: base_exception.py  constants.py  response.py
core/settings/exceptions/: auth.py  catalog.py  dataset.py  datasource.py  scan_job.py  tag.py
seed/: seed_admin.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_category.py  test_dataset.py  test_datasource.py  test_scan.py  test_tag.py
