[tool.poetry]
name = "minigovern"
version = "0.1.0"
description = "A Lightweight Data Governance Service"
authors = ["Zaid Alzubi <zaidalzubi3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.136.3"
alembic = "^1.18.4"
pydantic = {extras = ["email"], version = "^2.13.4"}
sqlalchemy = "^2.0.50"
uvicorn = "^0.49.0"
asyncpg = "^0.31.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "1.7.4"
httpx = "^0.28.1"
requests = "^2.34.2"
celery = "^5.6.3"
redis = "^8.0.0"
aiosmtplib = "^5.1.1"
pydantic-settings = "^2.14.1"
email-validator = "^2.2.0"
asyncmy = "^0.2.11"
cryptography = "^48.0.1"
bcrypt = "4.1.2"
pymysql = "^1.2.0"
python-multipart = "^0.0.32"
aiomysql = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
